Update spring-ai-alibaba-graph-core/src/main/java/com/alibaba/cloud/ai/graph/CompiledGraph.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>